--- a/templates/etc/tsocks.conf.j2
+++ b/templates/etc/tsocks.conf.j2
@@ -4,12 +4,12 @@
 # Lines beginning with # and blank lines are ignored
 #
 # The basic idea is to specify:
-#	- Local subnets - Networks that can be accessed directly without
-#			  assistance from a socks server
-#	- Paths - Paths are basically lists of networks and a socks server
-#		  which can be used to reach these networks
-#	- Default server - A socks server which should be used to access
-#			   networks for which no path is available
+# - Local subnets - Networks that can be accessed directly without
+#                   assistance from a socks server
+# - Paths - Paths are basically lists of networks and a socks server
+#           which can be used to reach these networks
+# - Default server - A socks server which should be used to access
+#                    networks for which no path is available
 # Much more documentation than provided in these comments can be found in
 # the man pages, tsocks(8) and tsocks.conf(8)
 
@@ -17,8 +17,9 @@
 # For this example this machine can directly access 192.168.0.0/255.255.255.0
 # (192.168.0.*) and 10.0.0.0/255.0.0.0 (10.*)
 
-local = 192.168.0.0/255.255.255.0
-local = 10.0.0.0/255.0.0.0
+{% for local in tsocks_local %}
+local = {{ local }}
+{% endfor %}
 
 # Paths
 # For this example this machine needs to access 150.0.0.0/255.255.0.0 as
@@ -27,22 +28,21 @@ local = 10.0.0.0/255.0.0.0
 # "socks.hello.com" we could also specify that, unless --disable-hostnames
 # was specified to ./configure).
 
+{% for path in tsocks_path %}
 path {
-	reaches = 150.0.0.0/255.255.0.0
-	reaches = 150.1.0.0:80/255.255.0.0
-	server = 10.1.7.25
-	server_type = 5
-	default_user = delius
-	default_pass = hello
+{% for directive in path.directives | default([]) %}
+  {{ directive }}
+{% endfor %}
 }
+{% endfor %}
 
 # Default server
 # For connections that aren't to the local subnets or to 150.0.0.0/255.255.0.0
 # the server at 192.168.0.1 should be used (again, hostnames could be used
 # too, see note above)
 
-server = 192.168.0.1
+server = {{ tsocks_server }}
 # Server type defaults to 4 so we need to specify it as 5 for this one
-server_type = 5
+server_type = {{ tsocks_server_type }}
 # The port defaults to 1080 but I've stated it here for clarity
-server_port = 1080
+server_port = {{ tsocks_server_port }}
